# Patient_care_VGH

./: .env.example  .gitignore  README.md  build.py  gui.py  main.py  pyproject.toml  requirements.txt
ai/: client.py  prompts.py  schema.py
cache/: manager.py
config/: settings.py
models/: patient.py
output/: docx_export.py  markdown.py
scraper/: endpoints.py  orchestrator.py  parser.py  session.py
scraper/fetchers/: __init__.py  admission_notes.py  demographics.py  imaging.py  io_records.py  labs.py  medications.py  operations.py  patient_list.py  progress_notes.py  vitals.py
